# rust-features

./: Cargo.toml  write_to_file.txt
src/: constants.rs  lib.rs  main.rs  old_main.rs
src/closures/: add_closure.rs  closure_with_move.rs  mod.rs
src/concurrency/: arc_mutex.rs  cell.rs  life_time.rs  linked_list.rs  mod.rs  rc.rs  ref_cell.rs  rw_lock.rs  send_sync.rs  struct_with_str_ref.rs  thread_channel_mutex.rs
src/coroutine_feature/: coroutine1.rs  coroutine_iterator.rs  mod.rs
src/generics_traits/: associated_types.rs  blanket_traits.rs  bound_in_where.rs  const_generics.rs  default_generic_type.rs  downcasting.rs  extension_traits.rs  fully_qualified_syntax.rs  generics.rs  marker_traits.rs  mod.rs  newtype.rs  struct_tagging.rs  super_trait.rs  wrapper_structs.rs
src/generics_traits/std_traits/: as_ref.rs  borrow_str.rs  borrow_trait.rs  cow.rs  deref.rs  mod.rs
src/global_state/: mod.rs
src/iterators/: mod.rs
src/lifetimes/: string_literal.rs
src/matches/: match_partially.rs  mod.rs
src/patterns/: mod.rs
src/patterns/builder/: builder.rs  mod.rs
src/patterns/command/: command.rs  mod.rs
src/patterns/new_type/: mod.rs  new_type.rs
src/patterns/observer/: another_observer.rs  mod.rs  observer_with_generics.rs  observer_with_trait.rs
src/patterns/state_machine/: mod.rs
src/reference_objects/: mod.rs  reference_objects_lib.rs
src/types/: mod.rs  options.rs  phantom_data.rs
