[package]
name = "rust-features"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

uuid = { version = "1", features = [
    "v4",
] } # You can enable other versions like v1 if needed

[features]
coroutine = []
